# cppORM

./: .gitignore  CMakeLists.txt  main.cpp  utils.cpp  utils.h  utils.hpp
applications/authorization/: Role.cpp  Role.h  Role.hpp  User.cpp  User.h  User.hpp
applications/requests/: Request.cpp  Request.h  Request.hpp
orm/: Field.cpp  Field.h  Field.hpp  Model.cpp  Model.h  Model.hpp
sqlite3/: sqlite3.exp  sqlite3.h  sqlite3.lib
